--- a/egs2/ofuton_p_utagoe_db/svs1/conf/tuning/train_visinger2_plus_hubert.yaml
+++ b/egs2/ofuton_p_utagoe_db/svs1/conf/tuning/train_visinger2_plus_hubert.yaml
@@ -147,25 +147,21 @@ pitch_normalize: None      # normalizer for the pitch feature
 
 # ying_extract: ying
 # frontend related
-
-frontend: fused
+frontend: s3prl
 frontend_conf:
-  frontends:
-    - frontend_type: s3prl
-      frontend_conf:
-        upstream: hubert_large_ll60k
-      download_dir: ./hub
-      multilayer_feature: True
+   frontend_conf:
+      upstream: hubert_large_ll60k
+   download_dir: ./hub
+   multilayer_feature: True
 
-    - frontend_type: s3prl
-      frontend_conf:
-        upstream: ***REMOVED***mert_custom
-        path_or_url: m-a-p/MERT-v1-330M
-      download_dir: ./hub
-      multilayer_feature: True
-
-  align_method: linear_projection
-  proj_dim: 100
+# we can also use the following frontend config (MERT):
+# frontend: s3prl
+# frontend_conf:
+#    frontend_conf:
+#         upstream: ***REMOVED***mert_custom
+#         path_or_url: m-a-p/MERT-v1-330M
+#    download_dir: ./hub
+#    multilayer_feature: True
 
 ##########################################################
 #            OPTIMIZER & SCHEDULER SETTING               #
