--- a/egs2/opencpop/svs1/conf/tuning/train_visinger2_plus_hubert.yaml
+++ b/egs2/opencpop/svs1/conf/tuning/train_visinger2_plus_hubert.yaml
@@ -150,10 +150,30 @@ pitch_normalize: None      # normalizer for the pitch feature
 frontend: s3prl
 frontend_conf:
    frontend_conf:
-        upstream: ***REMOVED***hubert_custom
-        path_or_url: TencentGameMate/chinese-hubert-large
+      upstream: hubert_large_ll60k
    download_dir: ./hub
    multilayer_feature: True
+
+# we can also use the following frontend configs
+
+# 1. (MERT):
+
+# frontend: s3prl
+# frontend_conf:
+#    frontend_conf:
+#         upstream: ***REMOVED***mert_custom
+#         path_or_url: m-a-p/MERT-v1-330M
+#    download_dir: ./hub
+#    multilayer_feature: True
+
+# 2. (Chinese Hubert):
+# frontend: s3prl
+# frontend_conf:
+#    frontend_conf:
+#         upstream: ***REMOVED***hubert_custom
+#         path_or_url: TencentGameMate/chinese-hubert-large
+#    download_dir: ./hub
+#    multilayer_feature: True
 
 ##########################################################
 #            OPTIMIZER & SCHEDULER SETTING               #
